--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,91 @@
-matplotlib==3.3.3
-pandas==1.1.5
-scipy==1.5.4
+altair==4.1.0
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+base58==2.1.0
+bleach==3.2.1
+blinker==1.4
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+dnspython==2.1.0
+email-validator==1.1.2
+entrypoints==0.3
+gitdb==4.0.5
+GitPython==3.1.12
+idna==2.5
+imageio==2.9.0
 imutils==0.5.3
-scikit_image==0.17.2
+ipykernel==5.4.3
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+MarkupSafe==1.1.1
+matplotlib==3.3.3
+mistune==0.8.4
+mysql-connector-python==8.0.22
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.4.3
+networkx==2.5
+notebook==6.2.0
 numpy==1.19.3
 opencv-python-headless==4.4.0.46
-email_validator==1.1.2
-streamlit==0.73.1
-Pillow==8.1.0
-idna==2.5.0
-wheel==0.36.2
-setuptools==51.1.2
+packaging==20.8
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.1
 pdf2image==1.14.0
-mysql-connector-python==8.0.22
-jedi==0.17.0
+pickleshare==0.7.5
+Pillow==8.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.10
+protobuf==3.14.0
+pycparser==2.20
+pydeck==0.5.0
+Pygments==2.7.4
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2020.5
+PyWavelets==1.1.1
+pywinpty==0.5.7
+pyzmq==21.0.1
+requests==2.25.1
+scikit-image==0.17.2
+scipy==1.5.4
+Send2Trash==1.5.0
+six==1.15.0
+smmap==3.0.4
+streamlit==0.73.1
+terminado==0.9.2
+testpath==0.4.4
+tifffile==2021.1.14
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+traitlets==5.0.5
+tzlocal==2.1
+urllib3==1.26.2
 validators==0.18.2
+watchdog==1.0.2
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
